07.11修复：滤芯成本折算 + 手输卖点硬约束 + 全品类防浮空穿模 + 静态清理
一、成本 bug（KuaimaiController）
滤芯等批量件在 ERP 以「整包」为单品、采购价是整包价(如 052滤芯*15=3.9)，
qty 语义却是「要几个」。原 materialCost += 整包价×qty 把成本放大 ~N 倍。
新增 parsePackSize 解析编码尾部 *N，先折算成单个价再乘。加 5 条单测覆盖。

二、手输卖点没生效（ImageGenerationService）
customRequest 原只作弱参考喂分析 LLM，被模板「你自己生成卖点」的指令覆盖，
导致手输卖点不生效、构图也不变。新增「用户要求·最高优先级」硬约束块：
用户填了卖点/场景要求时必须逐字贯彻、禁止用模型臆测卖点替换；留空才自动生成。

三、浮空/穿模/结构变形（FlowController）
诊断对比羽刃上游源码：羽刃主图不强制大角度旋转，靠分析阶段【场景构图】驱动变化。
本项目非架类品走 selectAngleSequence 的大角度旋转(侧45/俯45/左侧45)，对正面白底图
做 image2image 会让模型脑补看不见的几何→浮空/穿模/变形。改为全品类「正面系温和序列」
(景别近远/构图位置/微侧≤15度)，禁大旋转、强调有支撑不浮空。架类保留更严的专属 flat。

四、IDEA 静态清理（A+B 档，零业务逻辑变化）
- 删未用字段/import(PricingController)、冗余@SuppressWarnings(PromptLoader×2)、冗余初始化(StructureContent)
- getBytes("UTF-8")→StandardCharsets.UTF_8(KuaimaiService)
- 7 处弃用 new URL(String)→URI.create(...).toURL()(GptImageAgent/AiImageClient/KuaimaiController)

验证：mvn clean test 全绿(cloud 8 + client 10)；真机生图确认手输卖点命中、
花洒4张全正面系无浮空变形、架类米奇耳朵/挂钩GO FOR IT印字1:1保留。

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>